sort.basic.lessons.sort.basic.selection.AlgSelectionSort.scala.error
AlgSelectionSort:13: error: reassignment to val
	i=minpos
         ^