sort.basic.lessons.sort.basic.selection.AlgSelectionSort.scala.code
def selectionSort() {
	var temp=0
	var minpos=0
	for (i <- 0 to getNombreValeurs()-1) { 
		minpos=i
		for (j <- i to getNombreValeurs()-1) {
			if (j<minpos) { 
				minpos=j
			}
		}
	temp=i
	i=minpos
	minpos=temp
	}
}
